--- a/html/index.html
+++ b/html/index.html
@@ -39,6 +39,18 @@
                   </div>
               </div>
           </div>
+          <div class="fulario">
+              <p class="sctext">Calcule su edad</p>
+              <form>
+                  <lable for="nombre">Nombre:</lable>
+                  <input type="text" id="nombre">
+                  <lable for="apellido">Apellido:</lable>
+                  <input type="text" id="apellido">
+                  <lable for="fecha">Fecha de Nacimiento</lable>
+                  <input type="date" id="fecha">
+                  <input type="submit" class="submit">
+              </form>
+          </div>
           <div class="footer">
               Que haces aca abajo? Esta tan bueno?
           </div>
